--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "3.12.7"
 fastapi = {extras = ["all"], version = "^0.115.2"}
 pymongo = "^4.10.1"
+pytest = "^8.3.3"
+pytest-asyncio = "^0.24.0"
+httpx = "^0.27.2"
 
 
 [build-system]
